Fix font contrast ratio

--- a/assets/styles/scss/pages/home.scss
+++ b/assets/styles/scss/pages/home.scss
@@ -89,6 +89,7 @@
 
     strong{
       color: #003286;
+      background-color: #fff;
     }
 
     h2{
